# Protein_engineering_tools

./: .env  .env.example  .gitignore  CACHE_CLEAR_INSTRUCTIONS.md  DEPLOYMENT.md  IMPROVEMENT_RECOMMENDATIONS.md  README.md  codon_api.py  debug-api.html  index.html  package-lock.json  package.json  process_solubility_data.py  solubility_data_comprehensive.csv  solubility_data_updated.xlsx  tailwind.config.js  test-api.html  test-connection.sh  test-registration.html  vite.config.ts  vitest.config.ts
docs/: ARCHITECTURE.md  FEATURE_LOCATIONS.md  PFAM_SEARCH.md  QUICKSTART.md  SETUP.md  TESTING_GUIDE.md  pH_Calculator_Research.md
public/: crc_complete_solubility.csv
public/data/: aqsoldb.min.json  solubility-database-comprehensive.json  solubility-database.json  solubility-stats-comprehensive.json  solubility-stats.json
scripts/: convert_aqsoldb.cjs  convert_model_to_onnx.py  solubility_api.py
server/: .env.example  README.md  index.js  package-lock.json  package.json
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: README.md
src-tauri/src/: auth.rs  main.rs
src/components/: AdvancedVisualizations.tsx  AlignmentViewer.tsx  Auth.tsx  Calculator.tsx  ChemicalSearch.tsx  CodonOptimizer.tsx  CodonOptimizerAdvanced.tsx  DNA.tsx  Element.tsx  EmailVerificationBanner.tsx  EnhancedComparisonTable.tsx  ForgotPassword.tsx  InterProAnalysis.tsx  LibraryDesign.tsx  LoginModal.tsx  MetalSolubility.tsx  MultipleSequenceAlignment.tsx  MyRecipes.tsx  PhCalculator.tsx  ProtParam.tsx  ProteinConcentration.tsx  ProteinViewer.tsx  Toast.tsx  (+8 more)
(+52 files in other folders)
